use multer to upload local then upload image in cloud and use layer validator to product and update file swagger.yaml
