# utils/productValidator.js
@@ -1,0 +1,13 @@
+const { check } = require('express-validator');
+const validatorMiddleWare = require('../middleware/validatorMiddleWare');
+const createProductValidator = [
+    check('drug_name').notEmpty().withMessage('Please provide drug name'),
+    check('price').notEmpty().withMessage('Please provide price'),
+    check('town').notEmpty().withMessage('Please provide town'),
+    check('expiry_date').notEmpty().withMessage('Please provide expiry date'),
+    validatorMiddleWare,
+]
+
+module.exports = {
+    createProductValidator
+}
